--- a/index.html
+++ b/index.html
@@ -1,13 +1,49 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <Title>To do List</Title>
-        <style>
-            
-        </style>
-    </head>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ToDoList</title>
 
-    <body>
+    <link rel="stylesheet" href="main.css"/>
+</head>
+<body>
+    
+    <header>
+        <h1> Task list</h1>
+        <form id="new-task-form">
+            <input
+                type="text"
+                id="new-task-input"
+                placeholder="What is da plann" />
+            <input
+                type="submit"
+                id="new-task-submit"
+                value="Add task" />
+        </form>
+    </header>
 
-    </body>
+    <Main>
+
+        <section class="task-list">
+            <h2>Tasks</h2>
+
+            <div class="tasks">
+                <div class="task">
+                    <div class="content">
+                        <input
+                            type="text"
+                            class="text"
+                            value="My task"
+                            readonly
+                            />
+                    </div>
+                </div>
+
+
+            </div>
+        </section>
+    </Main>
+</body>
 </html>
